--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 dist: xenial
 language: node_js
 
+branches:
+  # blocklist
+  except:
+  - v2
+  - v3
+
+  # safelist
+  only:
+  - dev
+
 before_install:
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
 - export PATH="$HOME/.yarn/bin:$PATH"
