--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "badersur.github.io",
   "private": true,
   "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "4.3.0",
+  "version": "4.4.0",
   "author": "Bader Nasser <BaderSur@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -30,6 +30,7 @@
     "commonmark": "^0.29.0",
     "gatsby": "^2.6.0",
     "gatsby-image": "^2.1.0",
+    "gatsby-plugin-catch-links": "^2.0.15",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
