Switch to TypeScript... FTW?! maybe..

--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "badersur.github.io",
   "private": true,
   "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "4.9.0",
+  "version": "5.0.0",
   "author": "Bader Nasser <BaderSur@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "tsc --noEmit && gatsby build",
     "develop": "gatsby develop",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "fmt": "eslint . --fix",
+    "type-check": "tsc --noEmit",
     "browsers": "browserslist",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
@@ -37,6 +38,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.1",
     "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-sharp": "^2.1.19",
     "gatsby-transformer-yaml": "^2.1.12",
@@ -46,7 +48,12 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@types/commonmark": "^0.27.3",
+    "@types/node": "^12.0.2",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-helmet": "^5.0.8",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
