Dockerizing the app!

--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "badersur.github.io",
   "private": true,
   "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "author": "Bader Nasser <BaderSur@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc --noEmit && gatsby build",
+    "build:docker": "docker build -t badersur.github.io .",
     "develop": "gatsby develop",
+    "predevelop:docker": "docker build -t badersur.github.io .",
+    "develop:docker": "docker run --rm -it -p 8000:8000/tcp badersur.github.io:latest",
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "lint": "eslint .",
