--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "badersur.github.io",
   "private": true,
   "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "5.4.0",
+  "version": "5.4.1",
   "author": "Bader Nasser <BaderSur@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -34,42 +34,42 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "commonmark": "^0.29.0",
-    "gatsby": "^2.8.6",
-    "gatsby-image": "^2.1.1",
-    "gatsby-plugin-catch-links": "^2.0.15",
-    "gatsby-plugin-google-analytics": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.3",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-typescript": "^2.0.15",
-    "gatsby-source-filesystem": "^2.0.38",
-    "gatsby-transformer-sharp": "^2.1.21",
-    "gatsby-transformer-yaml": "^2.1.12",
+    "gatsby": "^2.13.8",
+    "gatsby-image": "^2.2.4",
+    "gatsby-plugin-catch-links": "^2.1.0",
+    "gatsby-plugin-google-analytics": "^2.1.1",
+    "gatsby-plugin-manifest": "^2.2.1",
+    "gatsby-plugin-offline": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sharp": "^2.2.3",
+    "gatsby-plugin-sitemap": "^2.2.1",
+    "gatsby-plugin-typescript": "^2.1.0",
+    "gatsby-source-filesystem": "^2.1.2",
+    "gatsby-transformer-sharp": "^2.2.1",
+    "gatsby-transformer-yaml": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@types/commonmark": "^0.27.3",
-    "@types/node": "^12.0.7",
-    "@types/react": "^16.8.18",
+    "@babel/core": "^7.5.0",
+    "@types/commonmark": "^0.27.4",
+    "@types/node": "^12.0.12",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "graphql": "^14.3.1",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "graphql": "^14.4.2",
     "prettier": "^1.18.2",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.2"
   }
 }
