--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "badersur.github.io",
   "private": true,
   "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "5.4.1",
+  "version": "5.5.0",
   "author": "Bader Nasser <BaderSur@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "prebuild": "rm -rf .cache public",
     "build": "tsc --noEmit && gatsby build",
     "build:docker": "docker build -t badersur.github.io .",
+    "predevelop": "rm -rf .cache public",
     "develop": "gatsby develop",
     "predevelop:docker": "docker build -t badersur.github.io .",
     "develop:docker": "docker run --rm -it -p 8000:8000/tcp badersur.github.io:latest",
