--- a/.travis.yml
+++ b/.travis.yml
@@ -2,32 +2,28 @@ dist: xenial
 language: node_js
 
 branches:
-  # blocklist
-  except:
-  - v2
-  - v3
-
   # safelist
   only:
-  - dev
+    - dev
 
 before_install:
-- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
-- export PATH="$HOME/.yarn/bin:$PATH"
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
+  - export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
-- yarn install --no-lockfile
+  - yarn install --no-lockfile
 
 script:
-- siteUrl=https://badersur.github.io yarn run build
+  - yarn outdated || echo "Building!..."
+  - siteUrl=https://badersur.github.io yarn run build
 
 deploy:
-- provider: pages
-  skip_cleanup: true
-  github_token: "$GITHUB_TOKEN"
-  target_branch: master
-  local_dir: public
-  email: badersur@gmail.com
-  name: Bader Nasser
-  on:
-    branch: dev
+  - provider: pages
+    skip_cleanup: true
+    github_token: "$GITHUB_TOKEN"
+    target_branch: master
+    local_dir: public
+    email: badersur@gmail.com
+    name: Bader Nasser
+    on:
+      branch: dev
