Improve redirects on netlify

--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
   "name": "badersur.github.io",
   "private": true,
   "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "5.5.0",
+  "version": "5.6.0",
   "author": "Bader Nasser <BaderSur@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prebuild": "rm -rf .cache public",
-    "build": "tsc --noEmit && gatsby build",
+    "prebuild": "tsc --noEmit && gatsby clean",
+    "build": "gatsby build",
     "build:docker": "docker build -t badersur.github.io .",
-    "predevelop": "rm -rf .cache public",
+    "predevelop": "gatsby clean",
     "develop": "gatsby develop",
     "predevelop:docker": "docker build -t badersur.github.io .",
     "develop:docker": "docker run --rm -it -p 8000:8000/tcp badersur.github.io:latest",
     "start": "gatsby develop",
+    "preserve": "tsc --noEmit && gatsby clean && gatsby build",
     "serve": "gatsby serve",
-    "preserve:prod": "tsc --noEmit && gatsby build",
-    "serve:prod": "gatsby serve",
     "lint": "eslint .",
     "fmt": "eslint . --fix",
     "type-check": "tsc --noEmit",
