--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 # https://github.com/netlify/netlify-dev-plugin#project-detection
 [dev]
   # Command to start gatsby's server
-  command = "yarn run serve:prod"
+  command = "yarn run serve"
   # Port that the dev server will be listening on
   port = 9000
   # required because i use a _redirect file
