--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_install:
   - export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
-  - yarn install --no-lockfile
+  - rm yarn.lock
+  - yarn
 
 script:
   - yarn outdated || echo "Building!..."
