--- a/package.json
+++ b/package.json
@@ -1,76 +1,75 @@
 {
-  "name": "badersur.github.io",
-  "private": true,
-  "description": "A simple Progressive Web App using React and Gatsby",
-  "version": "5.7.2",
-  "author": "Bader Nasser <BaderSur@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "prebuild": "tsc --noEmit && gatsby clean",
-    "build": "gatsby build",
-    "build:docker": "docker build -t badersur.github.io .",
-    "predevelop": "gatsby clean",
-    "develop": "gatsby develop",
-    "predevelop:docker": "docker build -t badersur.github.io .",
-    "develop:docker": "docker run --rm -it -p 8000:8000/tcp badersur.github.io:latest",
-    "start": "gatsby develop",
-    "preserve": "tsc --noEmit && gatsby clean && gatsby build",
-    "serve": "gatsby serve",
-    "lint": "eslint .",
-    "fmt": "eslint . --fix",
-    "type-check": "tsc --noEmit",
-    "browsers": "browserslist",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/badersur/badersur.github.io"
-  },
-  "bugs": {
-    "url": "https://github.com/badersur/badersur.github.io/issues"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.21",
-    "@fortawesome/free-brands-svg-icons": "^5.10.1",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "commonmark": "^0.29.0",
-    "gatsby": "^2.13.50",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-catch-links": "^2.1.2",
-    "gatsby-plugin-google-analytics": "^2.1.6",
-    "gatsby-plugin-manifest": "^2.2.4",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-sitemap": "^2.2.5",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-source-filesystem": "^2.1.8",
-    "gatsby-transformer-sharp": "^2.2.5",
-    "gatsby-transformer-yaml": "^2.2.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@types/commonmark": "^0.27.4",
-    "@types/node": "^12.6.9",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-helmet": "^5.0.8",
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "graphql": "^14.4.2",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
-  }
+    "name": "badersur.github.io",
+    "private": true,
+    "description": "A simple Progressive Web App using React and Gatsby",
+    "version": "5.8.0",
+    "author": "Bader Nasser <BaderSur@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "prebuild": "tsc --noEmit && gatsby clean",
+        "build": "gatsby build",
+        "build:docker": "docker build -t badersur.github.io .",
+        "predevelop": "gatsby clean",
+        "develop": "gatsby develop",
+        "predevelop:docker": "docker build -t badersur.github.io .",
+        "develop:docker": "docker run --rm -it -p 8000:8000/tcp badersur.github.io:latest",
+        "start": "gatsby develop",
+        "preserve": "tsc --noEmit && gatsby clean && gatsby build",
+        "serve": "gatsby serve",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "fmt": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+        "type-check": "tsc --noEmit",
+        "browsers": "browserslist",
+        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/badersur/badersur.github.io"
+    },
+    "bugs": {
+        "url": "https://github.com/badersur/badersur.github.io/issues"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.21",
+        "@fortawesome/free-brands-svg-icons": "^5.10.1",
+        "@fortawesome/free-solid-svg-icons": "^5.10.1",
+        "@fortawesome/react-fontawesome": "^0.1.4",
+        "commonmark": "^0.29.0",
+        "gatsby": "^2.13.52",
+        "gatsby-image": "^2.2.8",
+        "gatsby-plugin-catch-links": "^2.1.2",
+        "gatsby-plugin-google-analytics": "^2.1.7",
+        "gatsby-plugin-manifest": "^2.2.5",
+        "gatsby-plugin-offline": "^2.2.4",
+        "gatsby-plugin-react-helmet": "^3.1.3",
+        "gatsby-plugin-sharp": "^2.2.10",
+        "gatsby-plugin-sitemap": "^2.2.5",
+        "gatsby-plugin-typescript": "^2.1.2",
+        "gatsby-source-filesystem": "^2.1.9",
+        "gatsby-transformer-sharp": "^2.2.5",
+        "gatsby-transformer-yaml": "^2.2.4",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-helmet": "^5.2.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.5.5",
+        "@types/commonmark": "^0.27.4",
+        "@types/node": "^12.7.0",
+        "@types/react": "^16.8.24",
+        "@types/react-dom": "^16.8.5",
+        "@types/react-helmet": "^5.0.9",
+        "@typescript-eslint/eslint-plugin": "^1.13.0",
+        "@typescript-eslint/parser": "^1.13.0",
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb": "^17.1.1",
+        "eslint-config-prettier": "^6.0.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-prettier": "^3.1.0",
+        "eslint-plugin-react": "^7.14.3",
+        "graphql": "^14.4.2",
+        "prettier": "^1.18.2",
+        "typescript": "^3.5.3"
+    }
 }
