--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
     "name": "badersur.github.io",
     "private": true,
     "description": "A simple Progressive Web App using React and Gatsby",
-    "version": "5.8.0",
+    "version": "5.9.0",
     "author": "Bader Nasser <BaderSur@gmail.com>",
     "license": "MIT",
     "scripts": {
         "prebuild": "tsc --noEmit && gatsby clean",
         "build": "gatsby build",
+        "postbuild": "[ -n $siteUrl ] && echo \"\nSitemap: ${siteUrl}/sitemap.xml\" >> public/robots.txt",
         "build:docker": "docker build -t badersur.github.io .",
         "predevelop": "gatsby clean",
         "develop": "gatsby develop",
