Update deps with some tweaks...

--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
     "name": "badersur.github.io",
     "private": true,
     "description": "A simple Progressive Web App using React and Gatsby",
-    "version": "5.11.1",
+    "version": "5.12.0",
     "author": "Bader Nasser <BaderSur@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "prebuild": "tsc --noEmit && gatsby clean",
+        "type-check": "tsc --noEmit",
+        "clean": "gatsby clean",
+        "lint:prettier": "prettier -c '**/*.{html,json,yml,yaml,css,md}'",
+        "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "lint": "run-s lint:*",
+        "fmt": "run-s \"lint:prettier -- --write\" \"lint:eslint -- --fix\"",
+        "prebuild": "run-s type-check lint clean",
         "build": "gatsby build",
-        "postbuild": "[ -n $siteUrl ] && echo \"\nSitemap: ${siteUrl}/sitemap.xml\" >> public/robots.txt",
-        "build:docker": "docker build -t badersur.github.io .",
-        "predevelop": "gatsby clean",
+        "postbuild": "echo \"\nSitemap: ${siteUrl}/sitemap.xml\" >> public/robots.txt",
+        "predevelop": "run-s prebuild",
         "develop": "gatsby develop",
-        "predevelop:docker": "docker build -t badersur.github.io .",
+        "build:docker": "docker build -t badersur.github.io .",
+        "predevelop:docker": "run-s build:docker",
         "develop:docker": "docker run --rm -it -p 8000:8000/tcp badersur.github.io:latest",
         "start": "gatsby develop",
-        "preserve": "tsc --noEmit && gatsby clean && gatsby build",
+        "preserve": "run-s build",
         "serve": "gatsby serve",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-        "fmt": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-        "type-check": "tsc --noEmit",
-        "browsers": "browserslist",
         "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
     },
     "repository": {
@@ -31,47 +33,48 @@
         "url": "https://github.com/badersur/badersur.github.io/issues"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.25",
-        "@fortawesome/free-brands-svg-icons": "^5.11.2",
-        "@fortawesome/free-solid-svg-icons": "^5.11.2",
-        "@fortawesome/react-fontawesome": "^0.1.7",
+        "@fortawesome/fontawesome-svg-core": "^1.2.26",
+        "@fortawesome/free-brands-svg-icons": "^5.12.0",
+        "@fortawesome/free-solid-svg-icons": "^5.12.0",
+        "@fortawesome/react-fontawesome": "^0.1.8",
         "commonmark": "^0.29.0",
-        "gatsby": "^2.17.4",
-        "gatsby-image": "^2.2.29",
-        "gatsby-plugin-catch-links": "^2.1.15",
-        "gatsby-plugin-google-analytics": "^2.1.23",
-        "gatsby-plugin-manifest": "^2.2.23",
-        "gatsby-plugin-offline": "^3.0.16",
-        "gatsby-plugin-react-helmet": "^3.1.13",
-        "gatsby-plugin-sharp": "^2.2.32",
-        "gatsby-plugin-sitemap": "^2.2.19",
-        "gatsby-plugin-typescript": "^2.1.15",
-        "gatsby-source-filesystem": "^2.1.33",
-        "gatsby-transformer-sharp": "^2.3.0",
-        "gatsby-transformer-yaml": "^2.2.15",
-        "react": "^16.11.0",
-        "react-dom": "^16.11.0",
+        "gatsby": "^2.18.12",
+        "gatsby-image": "^2.2.36",
+        "gatsby-plugin-catch-links": "^2.1.21",
+        "gatsby-plugin-google-analytics": "^2.1.31",
+        "gatsby-plugin-manifest": "^2.2.33",
+        "gatsby-plugin-offline": "^3.0.29",
+        "gatsby-plugin-react-helmet": "^3.1.18",
+        "gatsby-plugin-sharp": "^2.3.8",
+        "gatsby-plugin-sitemap": "^2.2.24",
+        "gatsby-plugin-typescript": "^2.1.23",
+        "gatsby-source-filesystem": "^2.1.42",
+        "gatsby-transformer-sharp": "^2.3.9",
+        "gatsby-transformer-yaml": "^2.2.20",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
         "react-helmet": "^5.2.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.4",
+        "@babel/core": "^7.7.5",
         "@types/commonmark": "^0.27.4",
-        "@types/node": "^12.11.7",
-        "@types/react": "^16.9.11",
-        "@types/react-dom": "^16.9.3",
-        "@types/react-helmet": "^5.0.13",
-        "@typescript-eslint/eslint-plugin": "^2.5.0",
-        "@typescript-eslint/parser": "^2.5.0",
-        "eslint": "^6.6.0",
+        "@types/node": "^12.12.18",
+        "@types/react": "^16.9.16",
+        "@types/react-dom": "^16.9.4",
+        "@types/react-helmet": "^5.0.14",
+        "@typescript-eslint/eslint-plugin": "^2.12.0",
+        "@typescript-eslint/parser": "^2.12.0",
+        "eslint": "^6.7.2",
         "eslint-config-airbnb": "^18.0.1",
-        "eslint-config-prettier": "^6.5.0",
-        "eslint-plugin-import": "^2.18.2",
+        "eslint-config-prettier": "^6.7.0",
+        "eslint-plugin-import": "^2.19.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-react": "^7.16.0",
-        "eslint-plugin-react-hooks": "^2.2.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.17.0",
+        "eslint-plugin-react-hooks": "^1.7.0",
         "graphql": "^14.5.8",
-        "prettier": "^1.18.2",
-        "typescript": "^3.6.4"
+        "npm-run-all": "^4.1.5",
+        "prettier": "^1.19.1",
+        "typescript": "^3.7.3"
     }
 }
