--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
         - dev
 
 before_install:
-    - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.19.1
+    - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.21.1
     - export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
@@ -19,12 +19,12 @@ script:
     - yarn run build
 
 deploy:
-    -   provider: pages
-        skip_cleanup: true
-        github_token: "$GITHUB_TOKEN"
-        target_branch: master
-        local_dir: public
-        email: badersur@gmail.com
-        name: Bader Nasser
-        on:
-            branch: dev
+    - provider: pages
+      skip_cleanup: true
+      github_token: '$GITHUB_TOKEN'
+      target_branch: master
+      local_dir: public
+      email: badersur@gmail.com
+      name: Bader Nasser
+      on:
+          branch: dev
