--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,13 @@ branches:
     only:
         - dev
 
-before_install:
-    - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.21.1
-    - export PATH="$HOME/.yarn/bin:$PATH"
-
 install:
-    - rm yarn.lock
-    - yarn
+    - rm package-lock.json
+    - npm i
 
 script:
-    - yarn outdated || echo "Building!..."
-    - yarn run build
+    - npm outdated || echo "Building!..."
+    - npm run build
 
 deploy:
     - provider: pages
