--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,27 +3,27 @@
 // https://github.com/a-tarasyuk/webpack-typescript-babel/blob/master/tsconfig.json
 {
     "compilerOptions": {
-        "target": "esnext",
-        "module": "esnext",
+        "target": "ESNext",
+        "module": "CommonJS",
         "jsx": "react",
         "allowJs": true,
+        "checkJs": true,
         "resolveJsonModule": true,
         "moduleResolution": "node",
-        "rootDir": "./src",
-        "strict": true,
         "esModuleInterop": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitReturns": true,
-        "strictFunctionTypes": true,
-        "noUnusedLocals": true,
-        "pretty": true,
         "allowSyntheticDefaultImports": true,
+        "pretty": true,
+        "forceConsistentCasingInFileNames": true,
         "downlevelIteration": true,
-        "noFallthroughCasesInSwitch": true,
+        "strictFunctionTypes": true,
+        "strict": true,
+        "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noImplicitAny": true
+        "noImplicitReturns": true,
+        "noImplicitAny": true,
+        "noFallthroughCasesInSwitch": true,
+        "noEmit": true
     },
-    "include": ["src/**/*", "gatsby-*.js"],
+    "include": ["gatsby-config.js", "gatsby-*.ts", "src/**/*"],
     "exclude": ["node_modules", "public", ".cache"]
 }
