--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,4 @@
 {
-    "eslint.autoFixOnSave": true,
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact",
-        {
-            "language": "typescript",
-            "autoFix": true
-        },
-        {
-            "language": "typescriptreact",
-            "autoFix": true
-        }
-    ],
-    "editor.formatOnSave": true,
     "[javascript]": {
         "editor.formatOnSave": false
     },
@@ -25,7 +11,15 @@
     "[typescriptreact]": {
         "editor.formatOnSave": false
     },
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
+    ],
+    "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
+        "source.fixAll": true,
         "source.fixAll.eslint": true
     }
 }
