--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "badersur.github.io",
     "private": true,
     "description": "A simple Progressive Web App using React and Gatsby",
-    "version": "5.18.0",
+    "version": "5.19.0",
     "author": "Bader Nasser <BaderSur@gmail.com>",
     "license": "MIT",
     "scripts": {
@@ -48,19 +48,19 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
         "commonmark": "^0.29.1",
-        "gatsby": "^2.20.16",
-        "gatsby-image": "^2.3.2",
-        "gatsby-plugin-catch-links": "^2.2.1",
-        "gatsby-plugin-google-analytics": "^2.2.2",
-        "gatsby-plugin-manifest": "^2.3.3",
-        "gatsby-plugin-offline": "^3.1.2",
-        "gatsby-plugin-react-helmet": "^3.2.1",
-        "gatsby-plugin-sharp": "^2.5.4",
-        "gatsby-plugin-sitemap": "^2.3.1",
-        "gatsby-plugin-typescript": "^2.3.1",
-        "gatsby-source-filesystem": "^2.2.2",
-        "gatsby-transformer-sharp": "^2.4.4",
-        "gatsby-transformer-yaml": "^2.3.1",
+        "gatsby": "^2.21.0",
+        "gatsby-image": "^2.4.0",
+        "gatsby-plugin-catch-links": "^2.3.0",
+        "gatsby-plugin-google-analytics": "^2.3.0",
+        "gatsby-plugin-manifest": "^2.4.0",
+        "gatsby-plugin-offline": "^3.2.0",
+        "gatsby-plugin-react-helmet": "^3.3.0",
+        "gatsby-plugin-sharp": "^2.6.0",
+        "gatsby-plugin-sitemap": "^2.4.0",
+        "gatsby-plugin-typescript": "^2.4.0",
+        "gatsby-source-filesystem": "^2.3.0",
+        "gatsby-transformer-sharp": "^2.5.0",
+        "gatsby-transformer-yaml": "^2.4.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^5.2.1"
@@ -68,16 +68,17 @@
     "devDependencies": {
         "@babel/core": "^7.9.0",
         "@types/commonmark": "^0.27.4",
-        "@types/node": "^13.11.1",
+        "@types/node": "^13.13.4",
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.6",
         "@types/react-helmet": "^5.0.15",
-        "@typescript-eslint/eslint-plugin": "^2.27.0",
-        "@typescript-eslint/parser": "^2.27.0",
+        "@typescript-eslint/eslint-plugin": "^2.29.0",
+        "@typescript-eslint/parser": "^2.29.0",
+        "acorn": "^6.4.1",
         "cross-env": "^7.0.2",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-prettier": "^6.10.1",
+        "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.2",
@@ -86,8 +87,8 @@
         "graphql": "^14.6.0",
         "husky": "^4.2.5",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.0.4",
-        "ts-node": "^8.8.2",
+        "prettier": "^2.0.5",
+        "ts-node": "^8.9.1",
         "typescript": "^3.8.3"
     },
     "husky": {
